src/br/ufmg/compiler/MiniJavaParser.java
package br.ufmg.compiler;
// Generated from /home/hendrix/Desktop/Plan B/MiniJava.g4 by ANTLR 4.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MiniJavaParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IntegerLiteral=1, TrueLiteral=2, FalseLiteral=3, BooleanType=4, IntegerType=5, 
		LogicalAnd=6, LessThan=7, MoreThan=8, Plus=9, Minus=10, Times=11, ExclamationMark=12, 
		Equals=13, EndLine=14, Comma=15, Dot=16, OpenBracket=17, CloseBracket=18, 
		OpenParenthesis=19, CloseParenthesis=20, OpenSquareBrackets=21, CloseSquareBrackets=22, 
		Sysout=23, ThisExpression=24, KeywordClass=25, KeywordPublic=26, KeywordStatic=27, 
		KeywordVoid=28, KeywordMain=29, KeywordString=30, KeywordExtends=31, KeywordReturn=32, 
		KeyWordIf=33, KeywordElse=34, KeywordWhile=35, KeywordLength=36, KeywordNew=37, 
		Identifier=38, WS=39, COMMENT=40, LINE_COMMENT=41;
	public static final String[] tokenNames = {
		"<INVALID>", "IntegerLiteral", "'true'", "'false'", "'boolean'", "'int'", 
		"'&&'", "'<'", "'>'", "'+'", "'-'", "'*'", "'!'", "'='", "';'", "','", 
		"'.'", "'{'", "'}'", "'('", "')'", "'['", "']'", "'System.out.println'", 
		"'this'", "'class'", "'public'", "'static'", "'void'", "'main'", "'String'", 
		"'extends'", "'return'", "'if'", "'else'", "'while'", "'length'", "'new'", 
		"Identifier", "WS", "COMMENT", "LINE_COMMENT"
	};
	public static final int
		RULE_goal = 0, RULE_mainClass = 1, RULE_typeDeclaration = 2, RULE_classDeclaration = 3, 
		RULE_classExtendsDeclaration = 4, RULE_varDeclaration = 5, RULE_methodDeclaration = 6, 
		RULE_formalParameterList = 7, RULE_formalParameter = 8, RULE_formalParameterRest = 9, 
		RULE_type = 10, RULE_arrayType = 11, RULE_statement = 12, RULE_block = 13, 
		RULE_assignmentStatement = 14, RULE_arrayAssignmentStatement = 15, RULE_ifStatement = 16, 
		RULE_whileStatement = 17, RULE_printStatement = 18, RULE_expression = 19, 
		RULE_andExpression = 20, RULE_compareExpression = 21, RULE_plusExpression = 22, 
		RULE_minusExpression = 23, RULE_timesExpression = 24, RULE_arrayLookup = 25, 
		RULE_arrayLength = 26, RULE_messageSend = 27, RULE_expressionList = 28, 
		RULE_expressionRest = 29, RULE_primaryExpression = 30, RULE_arrayAllocationExpression = 31, 
		RULE_allocationExpression = 32, RULE_notExpression = 33, RULE_bracketExpression = 34;
	public static final String[] ruleNames = {
		"goal", "mainClass", "typeDeclaration", "classDeclaration", "classExtendsDeclaration", 
		"varDeclaration", "methodDeclaration", "formalParameterList", "formalParameter", 
		"formalParameterRest", "type", "arrayType", "statement", "block", "assignmentStatement", 
		"arrayAssignmentStatement", "ifStatement", "whileStatement", "printStatement", 
		"expression", "andExpression", "compareExpression", "plusExpression", 
		"minusExpression", "timesExpression", "arrayLookup", "arrayLength", "messageSend", 
		"expressionList", "expressionRest", "primaryExpression", "arrayAllocationExpression", 
		"allocationExpression", "notExpression", "bracketExpression"
	};

	@Override
	public String getGrammarFileName() { return "MiniJava.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiniJavaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class GoalContext extends ParserRuleContext {
		public MainClassContext mainClass() {
			return getRuleContext(MainClassContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MiniJavaParser.EOF, 0); }
		public List<TypeDeclarationContext> typeDeclaration() {
			return getRuleContexts(TypeDeclarationContext.class);
		}
		public TypeDeclarationContext typeDeclaration(int i) {
			return getRuleContext(TypeDeclarationContext.class,i);
		}
		public GoalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_goal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterGoal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitGoal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJavaVisitor ) return ((MiniJavaVisitor<? extends T>)visitor).visitGoal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GoalContext goal() throws RecognitionException {
		GoalContext _localctx = new GoalContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_goal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70); mainClass();
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KeywordClass) {
				{
				{
				setState(71); typeDeclaration();
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
				
			}
			setState(77); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MainClassContext extends ParserRuleContext {
		public TerminalNode CloseParenthesis() { return getToken(MiniJavaParser.CloseParenthesis, 0); }
		public TerminalNode CloseBracket(int i) {
			return getToken(MiniJavaParser.CloseBracket, i);
		}
		public List<TerminalNode> Identifier() { return getTokens(MiniJavaParser.Identifier); }
		public TerminalNode Identifier(int i) {
			return getToken(MiniJavaParser.Identifier, i);
		}
		public TerminalNode KeywordPublic() { return getToken(MiniJavaParser.KeywordPublic, 0); }
		public List<TerminalNode> CloseBracket() { return getTokens(MiniJavaParser.CloseBracket); }
		public TerminalNode KeywordStatic() { return getToken(MiniJavaParser.KeywordStatic, 0); }
		public TerminalNode KeywordClass() { return getToken(MiniJavaParser.KeywordClass, 0); }
		public TerminalNode KeywordString() { return getToken(MiniJavaParser.KeywordString, 0); }
		public TerminalNode CloseSquareBrackets() { return getToken(MiniJavaParser.CloseSquareBrackets, 0); }
		public TerminalNode OpenParenthesis() { return getToken(MiniJavaParser.OpenParenthesis, 0); }
		public TerminalNode OpenSquareBrackets() { return getToken(MiniJavaParser.OpenSquareBrackets, 0); }
		public TerminalNode OpenBracket(int i) {
			return getToken(MiniJavaParser.OpenBracket, i);
		}
		public TerminalNode KeywordVoid() { return getToken(MiniJavaParser.KeywordVoid, 0); }
		public List<TerminalNode> OpenBracket() { return getTokens(MiniJavaParser.OpenBracket); }
		public TerminalNode KeywordMain() { return getToken(MiniJavaParser.KeywordMain, 0); }
		public PrintStatementContext printStatement() {
			return getRuleContext(PrintStatementContext.class,0);
		}
		public MainClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mainClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterMainClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitMainClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJavaVisitor ) return ((MiniJavaVisitor<? extends T>)visitor).visitMainClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainClassContext mainClass() throws RecognitionException {
		MainClassContext _localctx = new MainClassContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_mainClass);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79); match(KeywordClass);
			setState(80); match(Identifier);
			setState(81); match(OpenBracket);
			setState(82); match(KeywordPublic);
			setState(83); match(KeywordStatic);
			setState(84); match(KeywordVoid);
			setState(85); match(KeywordMain);
			setState(86); match(OpenParenthesis);
			setState(87); match(KeywordString);
			setState(88); match(OpenSquareBrackets);
			setState(89); match(CloseSquareBrackets);
			setState(90); match(Identifier);
			setState(91); match(CloseParenthesis);
			setState(92); match(OpenBracket);
			setState(93); printStatement();
			setState(94); match(CloseBracket);
			setState(95); match(CloseBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeDeclarationContext extends ParserRuleContext {
		public ClassExtendsDeclarationContext classExtendsDeclaration() {
			return getRuleContext(ClassExtendsDeclarationContext.class,0);
		}
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public TypeDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterTypeDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitTypeDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJavaVisitor ) return ((MiniJavaVisitor<? extends T>)visitor).visitTypeDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeDeclarationContext typeDeclaration() throws RecognitionException {
		TypeDeclarationContext _localctx = new TypeDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_typeDeclaration);
		try {
			setState(99);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(97); classDeclaration();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(98); classExtendsDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclarationContext extends ParserRuleContext {
		public MethodDeclarationContext methodDeclaration(int i) {
			return getRuleContext(MethodDeclarationContext.class,i);
		}
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public TerminalNode Identifier() { return getToken(MiniJavaParser.Identifier, 0); }
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public List<MethodDeclarationContext> methodDeclaration() {
			return getRuleContexts(MethodDeclarationContext.class);
		}
		public TerminalNode CloseBracket() { return getToken(MiniJavaParser.CloseBracket, 0); }
		public TerminalNode OpenBracket() { return getToken(MiniJavaParser.OpenBracket, 0); }
		public TerminalNode KeywordClass() { return getToken(MiniJavaParser.KeywordClass, 0); }
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterClassDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitClassDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJavaVisitor ) return ((MiniJavaVisitor<? extends T>)visitor).visitClassDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101); match(KeywordClass);
			setState(102); match(Identifier);
			setState(103); match(OpenBracket);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BooleanType) | (1L << IntegerType) | (1L << Identifier))) != 0)) {
				{
				{
				setState(104); varDeclaration();
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KeywordPublic) {
				{
				{
				setState(110); methodDeclaration();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(116); match(CloseBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassExtendsDeclarationContext extends ParserRuleContext {
		public MethodDeclarationContext methodDeclaration(int i) {
			return getRuleContext(MethodDeclarationContext.class,i);
		}
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public TerminalNode KeywordClass(int i) {
			return getToken(MiniJavaParser.KeywordClass, i);
		}
		public TerminalNode KeywordExtends() { return getToken(MiniJavaParser.KeywordExtends, 0); }
		public TerminalNode Identifier(int i) {
			return getToken(MiniJavaParser.Identifier, i);
		}
		public List<TerminalNode> Identifier() { return getTokens(MiniJavaParser.Identifier); }
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public List<MethodDeclarationContext> methodDeclaration() {
			return getRuleContexts(MethodDeclarationContext.class);
		}
		public TerminalNode CloseBracket() { return getToken(MiniJavaParser.CloseBracket, 0); }
		public TerminalNode OpenBracket() { return getToken(MiniJavaParser.OpenBracket, 0); }
		public List<TerminalNode> KeywordClass() { return getTokens(MiniJavaParser.KeywordClass); }
		public ClassExtendsDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classExtendsDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterClassExtendsDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitClassExtendsDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJavaVisitor ) return ((MiniJavaVisitor<? extends T>)visitor).visitClassExtendsDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassExtendsDeclarationContext classExtendsDeclaration() throws RecognitionException {
		ClassExtendsDeclarationContext _localctx = new ClassExtendsDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classExtendsDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118); match(KeywordClass);
			setState(119); match(KeywordClass);
			setState(120); match(Identifier);
			setState(121); match(KeywordExtends);
			setState(122); match(Identifier);
			setState(123); match(OpenBracket);
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BooleanType) | (1L << IntegerType) | (1L << Identifier))) != 0)) {
				{
				{
				setState(124); varDeclaration();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KeywordPublic) {
				{
				{
				setState(130); methodDeclaration();
				}
				}
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(136); match(CloseBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclarationContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(MiniJavaParser.Identifier, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode EndLine() { return getToken(MiniJavaParser.EndLine, 0); }
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitVarDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJavaVisitor ) return ((MiniJavaVisitor<? extends T>)visitor).visitVarDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclarationContext varDeclaration() throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138); type();
			setState(139); match(Identifier);
			setState(140); match(EndLine);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDeclarationContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode CloseParenthesis() { return getToken(MiniJavaParser.CloseParenthesis, 0); }
		public List<VarDeclarationContext> varDeclaration() {
			return getRuleContexts(VarDeclarationContext.class);
		}
		public TerminalNode Identifier() { return getToken(MiniJavaParser.Identifier, 0); }
		public TerminalNode KeywordPublic() { return getToken(MiniJavaParser.KeywordPublic, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode CloseBracket() { return getToken(MiniJavaParser.CloseBracket, 0); }
		public FormalParameterListContext formalParameterList() {
			return getRuleContext(FormalParameterListContext.class,0);
		}
		public TerminalNode OpenParenthesis() { return getToken(MiniJavaParser.OpenParenthesis, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VarDeclarationContext varDeclaration(int i) {
			return getRuleContext(VarDeclarationContext.class,i);
		}
		public TerminalNode OpenBracket() { return getToken(MiniJavaParser.OpenBracket, 0); }
		public TerminalNode KeywordReturn() { return getToken(MiniJavaParser.KeywordReturn, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode EndLine() { return getToken(MiniJavaParser.EndLine, 0); }
		public MethodDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterMethodDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitMethodDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJavaVisitor ) return ((MiniJavaVisitor<? extends T>)visitor).visitMethodDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodDeclarationContext methodDeclaration() throws RecognitionException {
		MethodDeclarationContext _localctx = new MethodDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_methodDeclaration);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(142); match(KeywordPublic);
			setState(143); type();
			setState(144); match(Identifier);
			setState(145); match(OpenParenthesis);
			setState(147);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BooleanType) | (1L << IntegerType) | (1L << Identifier))) != 0)) {
				{
				setState(146); formalParameterList();
				}
			}

			setState(149); match(CloseParenthesis);
			setState(150); match(OpenBracket);
			setState(154);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(151); varDeclaration();
					}
					} 
				}
				setState(156);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OpenBracket) | (1L << Sysout) | (1L << KeyWordIf) | (1L << KeywordWhile) | (1L << Identifier))) != 0)) {
				{
				{
				setState(157); statement();
				}
				}
				setState(162);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(163); match(KeywordReturn);
			setState(164); expression();
			setState(165); match(EndLine);
			setState(166); match(CloseBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalParameterListContext extends ParserRuleContext {
		public List<FormalParameterRestContext> formalParameterRest() {
			return getRuleContexts(FormalParameterRestContext.class);
		}
		public FormalParameterRestContext formalParameterRest(int i) {
			return getRuleContext(FormalParameterRestContext.class,i);
		}
		public FormalParameterContext formalParameter() {
			return getRuleContext(FormalParameterContext.class,0);
		}
		public FormalParameterListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formalParameterList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).enterFormalParameterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniJavaListener ) ((MiniJavaListener)listener).exitFormalParameterList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniJavaVisitor ) return ((MiniJavaVisitor<? extends T>)visitor).visitFormalParameterList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormalParameterListContext formalParameterList() throws RecognitionException {
		FormalParameterListContext _localctx = new FormalParameterListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_formalParameterList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168); formalParameter();
			setState(172);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Comma) {
				{
				{
				setState(169); formalParameterRest();
				}
				}
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
